Microservices_Security_Practice_09_Istio/deploy/2.Ingress Gateway/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sts-virtual-service
  namespace: security
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
    - match:
        - uri:
            prefix: /oauth
      route:
      - destination:
          host: sts-service
          port:
            number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orders-virtual-service
  namespace: security
spec:
  hosts:
  - "*"                                
  gateways:
  - my-gateway   
  http:
    - match:
        - uri:
            prefix: /orders
      route:
      - destination:
          host: orders-service
          port:
            number: 80
